--- a/Agate/Agate.vcxproj
+++ b/Agate/Agate.vcxproj
@@ -82,12 +82,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Events\Event.h" />
+    <ClInclude Include="src\Agate\Logger.h" />
     <ClInclude Include="src\Agate\EntryPoint.h" />
     <ClInclude Include="src\Agate.h" />
     <ClInclude Include="src\Agate\Core.h" />
     <ClInclude Include="src\Agate\test.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Events\Event.cpp" />
+    <ClCompile Include="src\Agate\Logger.cpp" />
     <ClCompile Include="src\Agate\EntryPoint.cpp" />
     <ClCompile Include="src\Agate\test.cpp" />
   </ItemGroup>
