--- a/Agate/Agate.vcxproj.filters
+++ b/Agate/Agate.vcxproj.filters
@@ -1,51 +1,45 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="Agate">
+      <UniqueIdentifier>{E75FD10C-5374-F9BD-1CF6-9C1D88C9F5EE}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Agate\Events">
+      <UniqueIdentifier>{EB418DC0-D7A4-1C65-802A-551B6C6CE8E7}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Agate\test.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClInclude Include="src\Agate.h" />
     <ClInclude Include="src\Agate\Core.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Agate.h">
-      <Filter>Header Files</Filter>
+      <Filter>Agate</Filter>
     </ClInclude>
     <ClInclude Include="src\Agate\EntryPoint.h">
-      <Filter>Header Files</Filter>
+      <Filter>Agate</Filter>
     </ClInclude>
     <ClInclude Include="src\Agate\Events\Event.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Agate\Logger.h">
-      <Filter>Header Files</Filter>
+      <Filter>Agate\Events</Filter>
     </ClInclude>
     <ClInclude Include="src\Agate\Events\MouseEvent.h">
-      <Filter>Header Files</Filter>
+      <Filter>Agate\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\Agate\Logger.h">
+      <Filter>Agate</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Agate\test.h">
+      <Filter>Agate</Filter>
+    </ClInclude>
+    <ClInclude Include="src\agpch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Agate\test.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\Agate\EntryPoint.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Agate</Filter>
     </ClCompile>
     <ClCompile Include="src\Agate\Logger.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Agate</Filter>
     </ClCompile>
+    <ClCompile Include="src\Agate\test.cpp">
+      <Filter>Agate</Filter>
+    </ClCompile>
+    <ClCompile Include="src\agpch.cpp" />
   </ItemGroup>
 </Project>
