--- a/Agate/Agate.vcxproj
+++ b/Agate/Agate.vcxproj
@@ -159,20 +159,20 @@
     <ClInclude Include="src\Agate\Events\Event.h" />
     <ClInclude Include="src\Agate\Events\MouseEvent.h" />
     <ClInclude Include="src\Agate\Logger.h" />
+    <ClInclude Include="src\Agate\Math\Execptions.h" />
     <ClInclude Include="src\Agate\Math\Mat3D.h" />
     <ClInclude Include="src\Agate\Math\Math.h" />
     <ClInclude Include="src\Agate\Math\Vect2D.h" />
-    <ClInclude Include="src\Agate\test.h" />
-    <ClInclude Include="src\Agate\window\Create_Window.h" />
-    <ClInclude Include="src\agpch.h" />
-    <ClInclude Include="src\Agate\Math\Execptions.h" />
     <ClInclude Include="src\Agate\Math\Vect3D.h" />
+    <ClInclude Include="src\Agate\test.h" />
+    <ClInclude Include="src\Agate\window\Window.h" />
+    <ClInclude Include="src\agpch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Agate\EntryPoint.cpp" />
     <ClCompile Include="src\Agate\Logger.cpp" />
     <ClCompile Include="src\Agate\test.cpp" />
-    <ClCompile Include="src\Agate\window\Create_Window.cpp" />
+    <ClCompile Include="src\Agate\window\Window.cpp" />
     <ClCompile Include="src\agpch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
