--- a/Agate/Agate.vcxproj.filters
+++ b/Agate/Agate.vcxproj.filters
@@ -7,6 +7,9 @@
     <Filter Include="Agate\Events">
       <UniqueIdentifier>{EB418DC0-D7A4-1C65-802A-551B6C6CE8E7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Agate\Math">
+      <UniqueIdentifier>{20CDDA6F-0C85-1CBD-758C-F5186163B7AD}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Agate\window">
       <UniqueIdentifier>{0EB74834-FA19-D8D8-A39F-108F8FE1A35B}</UniqueIdentifier>
     </Filter>
@@ -31,18 +34,28 @@
     <ClInclude Include="src\Agate\Logger.h">
       <Filter>Agate</Filter>
     </ClInclude>
+    <ClInclude Include="src\Agate\Math\Execptions.h">
+      <Filter>Agate\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Agate\Math\Mat3D.h">
+      <Filter>Agate\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Agate\Math\Math.h">
+      <Filter>Agate\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Agate\Math\Vect2D.h">
+      <Filter>Agate\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Agate\Math\Vect3D.h">
+      <Filter>Agate\Math</Filter>
+    </ClInclude>
     <ClInclude Include="src\Agate\test.h">
       <Filter>Agate</Filter>
     </ClInclude>
-    <ClInclude Include="src\Agate\window\Create_Window.h">
+    <ClInclude Include="src\Agate\window\Window.h">
       <Filter>Agate\window</Filter>
     </ClInclude>
     <ClInclude Include="src\agpch.h" />
-    <ClInclude Include="src\Agate\Math\Vect3D.h" />
-    <ClInclude Include="src\Agate\Math\Execptions.h" />
-    <ClInclude Include="src\Agate\Math\Math.h" />
-    <ClInclude Include="src\Agate\Math\Vect2D.h" />
-    <ClInclude Include="src\Agate\Math\Mat3D.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Agate\EntryPoint.cpp">
@@ -54,7 +67,7 @@
     <ClCompile Include="src\Agate\test.cpp">
       <Filter>Agate</Filter>
     </ClCompile>
-    <ClCompile Include="src\Agate\window\Create_Window.cpp">
+    <ClCompile Include="src\Agate\window\Window.cpp">
       <Filter>Agate\window</Filter>
     </ClCompile>
     <ClCompile Include="src\agpch.cpp" />
