--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,18 +8,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_subdirectory(${PROJECT_SOURCE_DIR}/Agate)
+add_subdirectory(${PROJECT_SOURCE_DIR}/Application)
 
 
 
-file(GLOB appSrc
-        "Application/src/*.h"
-        "Application/src/*.cpp"
-        )
-
-include_directories("Agate/src")
-
-add_compile_definitions(Agate_STATIC)
-
-add_executable(Agate ${appSrc})
-
-target_link_libraries(Agate PRIVATE Agate-lib glfw)
