--- a/Agate/Agate.vcxproj.filters
+++ b/Agate/Agate.vcxproj.filters
@@ -31,7 +31,16 @@
     <ClInclude Include="src\Agate\Events\MouseEvent.h">
       <Filter>Agate\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\Agate\Layer.h">
+      <Filter>Agate</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Agate\LayerStack.h">
+      <Filter>Agate</Filter>
+    </ClInclude>
     <ClInclude Include="src\Agate\Logger.h">
+      <Filter>Agate</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Agate\Main.h">
       <Filter>Agate</Filter>
     </ClInclude>
     <ClInclude Include="src\Agate\Math\Execptions.h">
@@ -53,14 +62,12 @@
       <Filter>Agate\window</Filter>
     </ClInclude>
     <ClInclude Include="src\agpch.h" />
-    <ClInclude Include="src\Agate\Main.h">
-      <Filter>Agate</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Agate\LayerStack.h" />
-    <ClInclude Include="src\Agate\Layer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Agate\EntryPoint.cpp">
+      <Filter>Agate</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Agate\LayerStack.cpp">
       <Filter>Agate</Filter>
     </ClCompile>
     <ClCompile Include="src\Agate\Logger.cpp">
@@ -70,6 +77,5 @@
       <Filter>Agate\window</Filter>
     </ClCompile>
     <ClCompile Include="src\agpch.cpp" />
-    <ClCompile Include="src\Agate\LayerStack.cpp" />
   </ItemGroup>
 </Project>
