--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -20,5 +20,5 @@ add_compile_definitions(Agate_STATIC)
 
 add_executable(Application ${appSrc})
 
-target_link_libraries(Application PRIVATE Agate-lib glfw)
+target_link_libraries(Application PRIVATE Agate-lib glfw spdlog)
 
