--- a/Agate/CMakeLists.txt
+++ b/Agate/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.16)
 
 #set the project name and version
 project(Agate VERSION 1.0)
@@ -6,7 +6,6 @@ project(Agate VERSION 1.0)
 #specify the c++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-
 
 
 file(GLOB libSrc
@@ -37,4 +36,6 @@ add_subdirectory(vender/spdlog)
 add_compile_definitions(Agate_STATIC GLFW_INCLUDE_NONE)
 
 add_library(Agate-lib STATIC ${libSrc})
+
+#target_precompile_headers(Agate-lib PRIVATE src/agpch.h src/agpch.cpp)
 
