--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "Agate/vender/spdlog"]
 	path = Agate/vender/spdlog
 	url = https://github.com/TANK1-41/spdlog
+[submodule "Agate/vender/imgui"]
+	path = Agate/vender/imgui
+	url = https://github.com/TANK1-41/imgui.git
+	branch = docking
