--- a/Agate/CMakeLists.txt
+++ b/Agate/CMakeLists.txt
@@ -41,5 +41,7 @@ add_compile_definitions(Agate_STATIC GLFW_INCLUDE_NONE)
 
 add_library(Agate-lib STATIC ${libSrc} src/Agate/imgui-layer/build.cpp src/Agate/renderContext/Context.cpp src/Agate/renderContext/Context.h)
 
-#target_precompile_headers(Agate-lib PRIVATE src/agpch.h src/agpch.cpp)
+target_precompile_headers(Agate-lib PUBLIC
+        "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_SOURCE_DIR}/src/agpch.h>"
+        )
 
