fixed cmake and removed old TODO comments

--- a/Agate/CMakeLists.txt
+++ b/Agate/CMakeLists.txt
@@ -46,5 +46,5 @@ target_precompile_headers(Agate-lib PUBLIC
         )
 
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different ${PROJECT_SOURCE_DIR}/src/Agate/Rendering/Shaders ${buildDirExecutable}/Shaders
+        COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/src/Agate/Rendering/Shaders ${buildDirExecutable}/Shaders
         )
