--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y cmake libxrandr-dev libxinerama-dev
+        sudo apt-get install -y cmake libxrandr-dev libxinerama-dev libxcursor-dev
 
     - name: Configure and build
       run: |
@@ -29,3 +29,4 @@ jobs:
         cd build
         cmake ..
         make
+        
