--- a/Agate/CMakeLists.txt
+++ b/Agate/CMakeLists.txt
@@ -42,7 +42,8 @@ add_subdirectory(${PROJECT_SOURCE_DIR}/vender/assimp)
 
 add_compile_definitions(Agate_STATIC GLFW_INCLUDE_NONE)
 
-add_library(Agate-lib STATIC ${libSrc} ${libHead})
+add_library(Agate-lib STATIC ${libSrc} ${libHead}
+        src/Agate/Rendering/OpenGl/OpenGLCheck.h)
 
 # Link library to the Agate-lib target
 target_link_libraries(Agate-lib PUBLIC assimp glfw spdlog imgui glm)
@@ -50,6 +51,25 @@ target_link_libraries(Agate-lib PUBLIC assimp glfw spdlog imgui glm)
 target_precompile_headers(Agate-lib PUBLIC
         "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_SOURCE_DIR}/src/agpch.h>"
         )
+
+# Set compile definitions and options for debug and release configurations
+target_compile_definitions(Agate-lib PRIVATE
+        $<$<CONFIG:DEBUG>:DEBUG>
+        $<$<CONFIG:RELEASE>:RELEASE>
+)
+
+# Custom compile options for different compilers
+if (MSVC)
+        target_compile_options(Agate-lib PRIVATE
+                $<$<CONFIG:DEBUG>:/Zi>
+                $<$<CONFIG:RELEASE>:/O2>
+        )
+else()
+        target_compile_options(Agate-lib PRIVATE
+                $<$<CONFIG:DEBUG>:-g>
+                $<$<CONFIG:RELEASE>:-O3>
+        )
+endif()
 
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/src/Agate/Rendering/Shaders ${buildDirExecutable}/Shaders
