--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,10 @@ name: Build Debug and Release
 
 on:
   schedule:
-    # Run every week on Sunday at 00:00 UTC
     - cron: '0 0 * * 0'
   push:
     branches:
       - main
-      - develop
   pull_request:
     branches:
       - main
@@ -26,10 +24,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up CMake
-      uses: actions/setup-cmake@v3
-      with:
-        cmake-version: '3.21.1'  # Specify the version you need
+    - name: Install CMake on Linux
+      if: runner.os == 'Linux'
+      run: sudo apt-get install -y cmake
+
+    - name: Install CMake on Windows
+      if: runner.os == 'Windows'
+      run: |
+        choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System'
+        refreshenv
 
     - name: Configure CMake
       run: cmake -B build -S . -DCMAKE_BUILD_TYPE=${{ matrix.config }}
